# Desktop-Huffman-Coder-Decoder

./: pyproject.toml
src/: main.py
src/core/: app.py  coder.py
